<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/setup_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        app:strokeWidth="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_max="350dp">

        <LinearLayout
            android:id="@+id/setup_card_view_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                style="@style/TextAppearance.Material3.TitleLarge.Emphasized"
                android:id="@+id/setup_card_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/setup_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setup_card_view_ip_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setup_hint_ip">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setup_card_view_ip_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/setup_ip_digits"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setup_card_view_port_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setup_hint_port">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setup_card_view_port_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/setup_port_digits"
                    android:inputType="phone"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/setup_card_view_connect_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:text="@string/setup_connect_btn" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>