<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/main_card_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        app:strokeWidth="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="12dp">

            <View
                android:id="@+id/main_card_status_indicator"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/circle_red_12"
                android:layout_marginEnd="12dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_card_status_broker_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    tools:text="127.0.0.1:1883"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_card_status_connection_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_status_disconnected"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/main_card_camera_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:strokeWidth="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/main_live_layout"
        app:layout_constraintTop_toBottomOf="@id/main_card_status"
        app:layout_constraintBottom_toTopOf="@id/main_controls_layout">

        <androidx.camera.view.PreviewView
            android:id="@+id/main_card_camera_preview_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.google.android.material.loadingindicator.LoadingIndicator
            android:id="@+id/main_card_camera_loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/main_live_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_card_camera_preview"
        app:layout_constraintBottom_toBottomOf="@id/main_card_camera_preview">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/main_card_live_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_live_switch_title"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@color/md_theme_primary"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_controls_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/main_card_camera_preview"
        app:layout_constraintBottom_toTopOf="@id/main_card_logs">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_controls_layout_capture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_capture_image"
            android:textSize="16sp"
            app:icon="@drawable/camera_24"
            app:iconGravity="textStart"
            app:cornerRadius="8dp"
            android:layout_marginBottom="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DDDDDD"
            android:layout_marginBottom="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/main_controls_layout_auto_send_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_auto_send_switch_title"
                android:textSize="13sp"
                style="@style/TextAppearance.AppCompat.Body1"/>

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_controls_layout_auto_send_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_auto_send_interval_title"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/main_controls_layout_auto_send_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@string/main_auto_send_interval_default_value"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="4dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_quality_slider_title"
                android:textSize="13sp"
                android:layout_marginEnd="8dp"
                style="@style/TextAppearance.AppCompat.Body1"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/main_controls_layout_image_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:valueFrom="0"
                android:valueTo="100"
                android:value="90"
                android:stepSize="10"/>
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/main_card_logs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:strokeWidth="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_controls_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_card_logs_no_scroll"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:fontFamily="monospace"
            android:gravity="bottom"
            android:padding="8dp"
            android:text="@string/main_logs_default_text"
            android:textSize="11sp" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>